2017-02-10  Julien Bect  <julien.bect@centralesupelec.fr>

	Provide better tools to check for optimizer availability (ticket #64)

	* misc/optim/@stk_optim_baseclass: New abstract base class for all
	optimizer object classes.
	* misc/optim/@stk_optim_baseclass/stk_optim_baseclass.m: New
	function, constructor of the new base class.
	* misc/optim/@stk_optim_baseclass/isequal.m: Overload isequal
	Octave 3.2.x compatibility, see CODING_GUIDELINES.
	* misc/optim/@stk_optim_fmincon/stk_optim_fmincon.m: Derive from
	the new class.
	* misc/optim/@stk_optim_fminsearch/stk_optim_fminsearch.m: Idem.
	* misc/optim/@stk_optim_octavesqp/stk_optim_octavesqp.m: Itou.
	* misc/optim/stk_optim_isavailable.m: New function, which tests if
	a given optimization algorithm is available.
	* misc/optim/@stk_optim_baseclass/stk_optim_isavailable.m:
	Overload the generic function stk_optim_isavailable for the
	abstract base class.
	* misc/optim/stk_minimize_boxconstrained.m: Fix unit tests.
	* misc/optim/stk_minimize_unconstrained.m: Fix unit tests.
	* admin/octpkg/INDEX: Add new functions to the INDEX.

2017-02-07  Julien Bect  <julien.bect@centralesupelec.fr>

	Oldest supported version of Octave is now 3.2.4

	* admin/build_tools/build_octpkg.m: Modify supported version from
	3.2.2 to 3.2.4 in DESCRIPTION, in accordance with README.md.
	* NEWS: No need to advertise such a tiny change of version number.

	stk_init.m: Use __octave_config_info__ instead of octave_config_info

	* stk_init.m: Use __octave_config_info__ instead of
	octave_config_info, which is now deprecated.
	* admin/octpkg/patches/remove-buildmex.patch: Refresh patch.
	* admin/octpkg/patches/remove-testprivatemex.patch: Refresh patch.
	* admin/octpkg/patches/stk-init-rmpath-cleanup.patch: New patch.
	* admin/octpkg/patches/series: Insert new patch in the series.

	Prevent errors in Matlab <=R2014a using try-end blocks (bis)

	* arrays/@stk_factorialdesign/stk_factorialdesign.m: Add try-end block.